Huge commit. Transferred everything else from utilityFxns.R to the package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,24 @@
 
 export(convertDFT)
 export(detachAllPackages)
+export(dupCols)
+export(g_legend)
 export(geomMean)
 export(listToDT)
+export(mhead)
 export(mkdir)
+export(modelP)
+export(mvFiles)
+export(myTableGrob)
+export(nChooseK)
 export(naTo0)
+export(notice)
+export(plotColor)
+export(plotDensity)
+export(readAllExcel)
 export(returnSessionInfo)
+export(rmNARow)
+export(simpleCap)
 export(splitChar)
+export(splitComma)
+export(thirds)
