Second attempt to make ggplot themes loadable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(mkdir)
 export(modelP)
 export(mvFiles)
 export(myTableGrob)
+export(my_theme)
 export(nChooseK)
 export(naTo0)
 export(notice)
