Forgot to also at mergeDTs. This function could be improved and also does not have examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(dupCols)
 export(g_legend)
 export(geomMean)
 export(listToDT)
+export(mergeDTs)
 export(mhead)
 export(mkdir)
 export(modelP)
