--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Title: Miscellaneous R Utility Functions
 Version: 0.0.0.9000
 Authors@R: person("Wes", "Horton", email = "wrhorton592@gmail.com", role = c("aut", "cre"))
 Description: Just a collection of different functions I've written to make my life easier.
-Depends: R (>= 3.5.1)
+Depends: R (>= 3.5.1),
+	 data.table
 Imports: 
     data.table,
     ggplot2,
