Added plotSpecial function to print ggplot + legend + summary table to one figure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(naTo0)
 export(notice)
 export(plotColor)
 export(plotDensity)
+export(plotSpecial)
 export(readAllExcel)
 export(returnSessionInfo)
 export(rmNARow)
