Added new functions. (1) loadLib - load vector of libraries; (2) sourceDir - source all files in directory; (3) readDir - read specified (or all) files from directory into list of data.tables)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(dupCols)
 export(g_legend)
 export(geomMean)
 export(listToDT)
+export(loadLib)
 export(mergeDTs)
 export(mhead)
 export(mkdir)
@@ -25,9 +26,11 @@ export(plotColor)
 export(plotDensity)
 export(plotSpecial)
 export(readAllExcel)
+export(readDir)
 export(returnSessionInfo)
 export(rmNARow)
 export(simpleCap)
+export(sourceDir)
 export(splitChar)
 export(splitComma)
 export(thirds)
