Added function to see if a number is prime

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(detachAllPackages)
 export(dupCols)
 export(g_legend)
 export(geomMean)
+export(isPrime)
 export(listToDT)
 export(loadLib)
 export(mergeDTs)
