--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Depends: R (>= 3.5.1),
 Imports: 
     data.table,
     ggplot2,
-    RColorBrewer
+    RColorBrewer,
+    gtable
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
