--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(mkdir)
 export(modelP)
 export(mvFiles)
 export(myTableGrob)
+export(myWriteLines)
 export(my_theme)
 export(nChooseK)
 export(naTo0)
