Added overlap function to calculate Jaccard Index and BUB Index. Mainly used in TCRseq analysis.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(angle_x)
 export(angle_y)
 export(big_label)
 export(bl_times)
+export(calcOverlap)
 export(convertDFT)
 export(detachAllPackages)
 export(dupCols)
