Added determineBreaks.R, which will cut off the highest and lowest values in a range that is going to be plot in a heatmap, so that the colors are not as washed out.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bl_times)
 export(calcOverlap)
 export(convertDFT)
 export(detachAllPackages)
+export(determineBreaks)
 export(dupCols)
 export(g_legend)
 export(geomMean)
