Added function to remove duplicate gene rows from data.table in preparation for conversion to data.frame

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(plotSpecial)
 export(readAllExcel)
 export(readDir)
 export(returnSessionInfo)
+export(rmDupGenes)
 export(rmNARow)
 export(simpleCap)
 export(sourceDir)
