New function - splitInputNumbers() will split a character string like '1,2,3:6' into a numeric vector 1:6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,5 +38,6 @@ export(simpleCap)
 export(sourceDir)
 export(splitChar)
 export(splitComma)
+export(splitInputNumbers)
 export(thirds)
 export(times)
