Added new function for YWBC dataset construction that combines columns with missing info

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(geomMean)
 export(isPrime)
 export(listToDT)
 export(loadLib)
+export(mergeAndFillCols)
 export(mergeDTs)
 export(mhead)
 export(mkdir)
