Forgot to update documentation before last push. myT.R is now exported in NAMESPACE.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(mhead)
 export(mkdir)
 export(modelP)
 export(mvFiles)
+export(myT)
 export(myTableGrob)
 export(myWriteLines)
 export(my_theme)
