Added two new ggplot themes that have black bkgd and white text. Haven't tested much, so may need to update later

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(angle_both)
 export(angle_x)
 export(angle_y)
 export(big_label)
+export(bl_black)
 export(bl_times)
 export(calcOverlap)
 export(convertDFT)
@@ -24,6 +25,7 @@ export(mvFiles)
 export(myT)
 export(myTableGrob)
 export(myWriteLines)
+export(my_black)
 export(my_theme)
 export(nChooseK)
 export(naTo0)
