Added revComp() to reverse complement strings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(plotSpecial)
 export(readAllExcel)
 export(readDir)
 export(returnSessionInfo)
+export(revComp)
 export(rmDupGenes)
 export(rmNARow)
 export(simpleCap)
