Added two quick functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(big_label)
 export(bl_black)
 export(bl_times)
 export(calcOverlap)
+export(checkSamples)
 export(convertDFT)
 export(detachAllPackages)
 export(determineBreaks)
 export(dupCols)
+export(fixVSegments)
 export(g_legend)
 export(geomMean)
 export(isPrime)
