--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(bl_times)
 export(calcOverlap)
 export(checkSamples)
 export(convertDFT)
+export(cpmThresh)
 export(detachAllPackages)
 export(determineBreaks)
 export(dupCols)
