Realized error was caused due to missing '@export' argument. Removed getMatch test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(cpmThresh)
 export(detachAllPackages)
 export(determineBreaks)
 export(dupCols)
+export(findMatch)
 export(fixVSegments)
 export(g_legend)
 export(geomMean)
