Added function from SO to label ggplot axes as 2^x

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(fixVSegments)
 export(g_legend)
 export(geomMean)
 export(isPrime)
+export(label_log2)
 export(listToDT)
 export(loadLib)
 export(mergeAndFillCols)
