Add function to find number of PCs to use in seurat. Add man pages for newer functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(angle_y)
 export(big_label)
 export(bl_black)
 export(bl_times)
+export(calcErrorBars)
 export(calcOverlap)
 export(checkSamples)
 export(convertDFT)
@@ -14,6 +15,7 @@ export(detachAllPackages)
 export(determineBreaks)
 export(dupCols)
 export(findMatch)
+export(findPCs)
 export(fixVSegments)
 export(g_legend)
 export(geomMean)
