--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(bl_times)
 export(calcErrorBars)
 export(calcOverlap)
 export(checkSamples)
+export(comparePCs)
 export(convertDFT)
 export(cpmThresh)
 export(detachAllPackages)
