Update manual for findAllMarkers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(isPrime)
 export(label_log2)
 export(listToDT)
 export(loadLib)
+export(mcFindAllMarkers)
 export(mergeAndFillCols)
 export(mergeDTs)
 export(mhead)
