New function from Nick Calistri to help determine resolution for clustering.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(bl_times)
 export(calcErrorBars)
 export(calcOverlap)
 export(checkSamples)
+export(clusterQC)
+export(clusterSweep)
 export(comparePCs)
 export(convertDFT)
 export(cpmThresh)
