--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(mkdir)
 export(modelP)
 export(mvFiles)
 export(myClusterSweep)
+export(myKable)
 export(myT)
 export(myTableGrob)
 export(myWriteLines)
