Quick wrapper for openxlsx to write a named list to workbook

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(modelP)
 export(mvFiles)
 export(myClusterSweep)
 export(myKable)
+export(myOpenXWriteWkbk)
 export(myT)
 export(myTableGrob)
 export(myWriteLines)
