forgot to add export param in function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(returnSessionInfo)
 export(revComp)
 export(rmDupGenes)
 export(rmNARow)
+export(runFGSEA)
 export(simpleCap)
 export(sourceDir)
 export(splitChar)
