Function to display proportion of identity in each cluster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(my_theme)
 export(nChooseK)
 export(naTo0)
 export(notice)
+export(plotClusterProps)
 export(plotColor)
 export(plotDensity)
 export(plotSpecial)
