Update cluster sweep ti take reduction name. (didn't do completely last time). Add first pass of silhouette score function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(revComp)
 export(rmDupGenes)
 export(rmNARow)
 export(runFGSEA)
+export(silhouetteScore)
 export(simpleCap)
 export(sourceDir)
 export(splitChar)
