--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(angle_y)
 export(big_label)
 export(bl_black)
 export(bl_times)
+export(calcEmbeddings)
 export(calcErrorBars)
 export(calcOverlap)
 export(checkSamples)
