Forgot to add man page and namespae

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(modelP)
 export(mvFiles)
 export(myClusterSweep)
 export(myKable)
+export(myLISI)
 export(myOpenXWriteWkbk)
 export(myT)
 export(myTableGrob)
@@ -62,5 +63,6 @@ export(sourceDir)
 export(splitChar)
 export(splitComma)
 export(splitInputNumbers)
+export(standardPlots)
 export(thirds)
 export(times)
