--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,11 @@ Imports:
     data.table,
     ggplot2,
     RColorBrewer,
-    gtable
+    gtable,
+    grDevices,
+    tibble,
+    bluster,
+    Seurat
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
