Forgot to commit namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(findPCs)
 export(fixVSegments)
 export(g_legend)
 export(geomMean)
+export(getOutliers)
 export(isPrime)
 export(label_log2)
 export(listToDT)
