Added two helper functions to format data for heatmap labels for scRNAseq DEG

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,8 +23,10 @@ export(findPCs)
 export(fixVSegments)
 export(g_legend)
 export(geomMean)
+export(getHeatGenes)
 export(getOutliers)
 export(isPrime)
+export(labelSigHeatGenes)
 export(label_log2)
 export(listToDT)
 export(loadLib)
