New function to convert gene names between human and mouse using biomart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(checkSamples)
 export(clusterQC)
 export(comparePCs)
 export(convertDFT)
+export(convertMouseHumanGenes)
 export(cpmThresh)
 export(detachAllPackages)
 export(determineBreaks)
