Remove data.table from Depends section and put in Imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,17 +3,14 @@ Title: Miscellaneous R Utility Functions
 Version: 0.0.0.9000
 Authors@R: person("Wes", "Horton", email = "wrhorton592@gmail.com", role = c("aut", "cre"))
 Description: Just a collection of different functions I've written to make my life easier.
-Depends: R (>= 3.5.1),
-	 data.table
+Depends: R (>= 3.5.1)
 Imports: 
     data.table,
     ggplot2,
     RColorBrewer,
     gtable,
     grDevices,
-    tibble,
-    bluster,
-    Seurat
+    tibble
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
