Update determineBreaks to give output of number of rows in input that are in each break

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,10 @@ Depends: R (>= 3.5.1)
 Imports: 
     data.table,
     ggplot2,
-    RColorBrewer,
-    gtable,
     grDevices,
+    gtable,
+    pheatmap,
+    RColorBrewer,
     tibble
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
