mergeDTs is failing when loaded from package. Error not super informative. Trying import data.table within function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,4 +58,5 @@ export(splitComma)
 export(splitInputNumbers)
 export(thirds)
 export(times)
+import(data.table)
 importFrom(ggplot2,ggplot_gtable)
