New function to calculate effective number of species (inverse simpson diversity index) 'calcENS'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(angle_y)
 export(big_label)
 export(bl_black)
 export(bl_times)
+export(calcENS)
 export(calcErrorBars)
 export(calcOverlap)
 export(checkSamples)
