New function to determine output grid size for layouts - determineGrid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(convertMouseHumanGenes)
 export(cpmThresh)
 export(detachAllPackages)
 export(determineBreaks)
+export(determineGrid)
 export(dupCols)
 export(findMatch)
 export(findPCs)
