New ggtheme with extra extra large labels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(isPrime)
 export(label_log2)
 export(listToDT)
 export(loadLib)
+export(massive_label)
 export(mcFindAllMarkers)
 export(mergeAndFillCols)
 export(mergeDTs)
