New function to parse complex arguments from commandline into Rscript

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(plotColor)
 export(plotDensity)
 export(plotSpecial)
 export(readAllExcel)
+export(readComplexArgs)
 export(readDir)
 export(returnSessionInfo)
 export(revComp)
