--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(determineGrid)
 export(dupCols)
 export(findMatch)
 export(findPCs)
+export(findSimilarColor)
 export(fixVSegments)
 export(g_legend)
 export(geomMean)
@@ -37,6 +38,7 @@ export(modelP)
 export(mvFiles)
 export(myKable)
 export(myOpenXWriteWkbk)
+export(myRGB)
 export(myT)
 export(myTableGrob)
 export(myWriteLines)
@@ -62,5 +64,6 @@ export(splitComma)
 export(splitInputNumbers)
 export(thirds)
 export(times)
+export(writeCSVorExcel)
 import(data.table)
 importFrom(ggplot2,ggplot_gtable)
