New function to calculate price given a desired profit margin

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(notice)
 export(plotColor)
 export(plotDensity)
 export(plotSpecial)
+export(profitMarginCalculator)
 export(readAllExcel)
 export(readComplexArgs)
 export(readDir)
