--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(returnSessionInfo)
 export(revComp)
 export(rmDupGenes)
 export(rmNARow)
+export(shippingCalculator)
 export(simpleCap)
 export(sourceDir)
 export(splitChar)
