Add to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(detachAllPackages)
 export(determineBreaks)
 export(determineGrid)
 export(dupCols)
+export(fdSubchunkify)
 export(findMatch)
 export(findPCs)
 export(findSimilarColor)
