Forgot to add NAMESPACE update to last commit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,13 +17,13 @@ export(detachAllPackages)
 export(determineBreaks)
 export(determineGrid)
 export(dupCols)
-export(fdSubchunkify)
 export(findMatch)
 export(findPCs)
 export(findSimilarColor)
 export(fixVSegments)
 export(g_legend)
 export(geomMean)
+export(getAllListNames)
 export(getOutliers)
 export(isPrime)
 export(label_log2)
