--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(geomMean)
 export(getAllListNames)
 export(getOutliers)
 export(isPrime)
+export(kableHighlightColumns)
 export(label_log2)
 export(listToDT)
 export(loadLib)
