Refactor list names function to be better

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(getOutliers)
 export(isPrime)
 export(kableHighlightColumns)
 export(label_log2)
+export(listNames)
 export(listToDT)
 export(loadLib)
 export(massive_label)
