New function to quickly get some colors from r color brewer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(fixVSegments)
 export(g_legend)
 export(geomMean)
 export(getAllListNames)
+export(getColors)
 export(getOutliers)
 export(isPrime)
 export(kableHighlightColumns)
