New function to bind lists of data.tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(cpmThresh)
 export(detachAllPackages)
 export(determineBreaks)
 export(determineGrid)
+export(dtListBind)
 export(dupCols)
 export(findMatch)
 export(findPCs)
