New function to get non-repeating pairwise comparisons from a vector

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(geomMean)
 export(getAllListNames)
 export(getColors)
 export(getOutliers)
+export(getPairwiseComparisons)
 export(isPrime)
 export(kableHighlightColumns)
 export(label_log2)
