New function checkExcel() that runs a diff for excel workbooks. Also made an executable in runScripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(bl_times)
 export(calcENS)
 export(calcErrorBars)
 export(calcOverlap)
+export(checkExcel)
 export(checkSamples)
 export(convertDFT)
 export(convertMouseHumanGenes)
