Forgot to add @export to myCorChart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(mhead)
 export(mkdir)
 export(modelP)
 export(mvFiles)
+export(myCorChart)
 export(myKable)
 export(myOpenXWriteWkbk)
 export(myRGB)
