Add survival function wrapper. Made a long time ago for Sushil project, updated/simplified it a bit and added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(revComp)
 export(rmDupGenes)
 export(rmNARow)
 export(simpleCap)
+export(simpleSurvival)
 export(sourceDir)
 export(splitChar)
 export(splitComma)
