Add km plot from old utilityFxns.R script. Should try to combine this with simple survival at some point or make them work together or something. Maybe one to calc survival and one to make the plot?

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(getOutliers)
 export(getPairwiseComparisons)
 export(isPrime)
 export(kableHighlightColumns)
+export(kmPlot)
 export(label_log2)
 export(listNames)
 export(listToDT)
