--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(sourceDir)
 export(splitChar)
 export(splitComma)
 export(splitInputNumbers)
+export(stackName)
 export(thirds)
 export(times)
 export(writeCSVorExcel)
