New fxn to get grid dimensions for pdf output. Also have determineGrid()...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(g_legend)
 export(geomMean)
 export(getAllListNames)
 export(getColors)
+export(getDims)
 export(getOutliers)
 export(getPairwiseComparisons)
 export(isPrime)
