Update annotatedBar to keep x axis optionally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(determineBreaks)
 export(determineGrid)
 export(dtListBind)
 export(dupCols)
+export(facetStackedBar)
 export(findMatch)
 export(findPCs)
 export(findSimilarColor)
@@ -75,6 +76,7 @@ export(splitChar)
 export(splitComma)
 export(splitInputNumbers)
 export(stackName)
+export(stackedBar)
 export(thirds)
 export(times)
 export(writeCSVorExcel)
