New functions to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(checkExcel)
 export(checkSamples)
 export(convertDFT)
 export(convertMouseHumanGenes)
+export(correlationCutOff)
 export(cpmThresh)
 export(detachAllPackages)
 export(determineBreaks)
@@ -21,6 +22,7 @@ export(determineGrid)
 export(dtListBind)
 export(dupCols)
 export(facetStackedBar)
+export(findCommonCorrGenes)
 export(findMatch)
 export(findPCs)
 export(findSimilarColor)
@@ -77,6 +79,7 @@ export(splitComma)
 export(splitInputNumbers)
 export(stackName)
 export(stackedBar)
+export(tcgaCorrelation)
 export(thirds)
 export(times)
 export(writeCSVorExcel)
